# FluxFang

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile
backend/crates/fluxfang-api/: Cargo.toml
backend/crates/fluxfang-api/src/: ageout.rs  ai_audit.rs  alert_methods.rs  alert_rules.rs  auth_routes.rs  capture.rs  catalog_routes.rs  config_routes.rs  correlate.rs  cotravel.rs  data_sources.rs  dto.rs  emissions.rs  emitter_type_routes.rs  emitters.rs  entities.rs  forwarder.rs  gps_status.rs  lib.rs  main.rs  middleware.rs  notifications.rs  sensor_listener.rs  sensor_status.rs  sensors.rs  state.rs  system.rs  test_support.rs  ws.rs  zones.rs
backend/crates/fluxfang-api/src/ingest/: alerts.rs  location.rs  matcher.rs  mod.rs  pump.rs  session.rs  zones.rs
backend/crates/fluxfang-api/src/localization/: binning.rs  estimate.rs  mod.rs  pass.rs
backend/crates/fluxfang-api/src/mcp/: audit.rs  guard.rs  mod.rs  protocol.rs  shape.rs
backend/crates/fluxfang-api/src/mcp/tools/: analysis.rs  mod.rs  reads.rs  subtractions.rs  writes.rs
backend/crates/fluxfang-api/src/notify/: email.rs  mod.rs  webhook.rs
backend/crates/fluxfang-api/tests/: ai_audit_api.rs  alert_methods.rs  alert_rules.rs  auth.rs  catalog.rs  config.rs  correlate.rs  cotravel.rs  data_sources.rs  e2e.rs  emissions.rs  emitter_types.rs  emitters.rs  entities.rs  forwarder.rs  forwarder_error_detail.rs  forwarder_startup.rs  gps_status.rs  health.rs  localization_pass.rs  mac_persistence.rs  mcp_protocol.rs  mcp_tools_analysis.rs  mcp_tools_reads.rs  mcp_tools_subtractions.rs  mcp_tools_writes.rs  notifications.rs  request_approval.rs  sensor_enroll.rs  sensor_ingest.rs  sensor_ingest_scale.rs  sensor_listener.rs  sensor_mode_live.rs  sensor_status.rs  sensor_sync.rs  sensors_api.rs  system.rs  ws.rs  zones.rs
backend/crates/fluxfang-api/tests/common/: mod.rs
backend/crates/fluxfang-capture/: Cargo.toml
backend/crates/fluxfang-capture/examples/: gen_beacons_pcap.rs
backend/crates/fluxfang-capture/src/: enumerate.rs  lib.rs  mock.rs
backend/crates/fluxfang-capture/src/bluetooth/: mod.rs  props.rs  scan.rs
backend/crates/fluxfang-capture/src/gps/: gpsd.rs  manual.rs  mod.rs  nmea.rs  serial.rs
backend/crates/fluxfang-capture/src/rtl/: mod.rs  parse.rs  tpms.rs
backend/crates/fluxfang-capture/src/wifi/: mod.rs  monitor.rs  parse.rs  scan.rs  security.rs
backend/crates/fluxfang-capture/tests/: nmea.rs  wifi_assoc_parse.rs  wifi_parse.rs  wifi_scan_parse.rs
backend/crates/fluxfang-capture/tests/fixtures/: beacons.pcap
backend/crates/fluxfang-core/: Cargo.toml
backend/crates/fluxfang-core/data/: bt_company_ids.tsv  ieee_oui.tsv
backend/crates/fluxfang-core/src/: auth.rs  catalog.rs  classify.rs  correlate.rs  cotravel.rs  lib.rs  retention.rs  rule.rs  rule_sql.rs  secrets.rs
backend/crates/fluxfang-core/src/bluetooth/: mod.rs  vendor.rs
backend/crates/fluxfang-db/: Cargo.toml
backend/crates/fluxfang-db/src/: lib.rs  models.rs  node_config.rs  sort.rs
backend/crates/fluxfang-db/src/repo/: ai_audit.rs  alert_method.rs  alert_rule.rs  app_config.rs  cached_emission.rs  cotravel.rs  data_source.rs  emission.rs  emitter.rs  emitter_association.rs  entity.rs  location.rs  mod.rs  notification.rs  sensor.rs  session.rs  zone.rs  zone_membership.rs
backend/crates/fluxfang-db/tests/: ai_audit.rs  emission_delete_where.rs  migrate.rs  migration_0012.rs  provenance.rs  repo_alert_method.rs  repo_alert_rule.rs  repo_app_config.rs  repo_cached_emission.rs  repo_cotravel.rs  repo_data_source.rs  repo_emission.rs  repo_emitter.rs  repo_emitter_ageout.rs  repo_emitter_association.rs  repo_entity.rs  repo_location.rs  repo_notification.rs  repo_sensor.rs  repo_session.rs  repo_zone.rs  repo_zone_membership.rs  schema.rs
backend/crates/fluxfang-db/tests/common/: mod.rs
backend/crates/fluxfang-sensor-proto/: Cargo.toml
backend/crates/fluxfang-sensor-proto/src/: batch.rs  error.rs  fingerprint.rs  key.rs  lib.rs  seal.rs
backend/migrations/: 0001_init.sql  0002_single_active_session.sql  0003_wifi_scan_mode.sql  0004_emitter_classification.sql  0005_bluetooth_datasource.sql  0006_bluetooth_emission_kind.sql  0007_rtl_sdr_tpms_datasource.sql  0008_emitter_association.sql  0009_location_quality_and_datasource_health.sql  0010_cotravel_ignore.sql  0011_gps_manual_mode.sql  0012_mcp_provenance_and_audit.sql  0013_sensor_datasource.sql  0014_sensor_keyring.sql  0015_emission_sensor_id.sql  0016_cached_emission.sql  0017_backfill_node_role.sql  0018_cached_emission_delivered_at.sql  0019_emitter_estimate.sql  0020_backfill_mac_persistence.sql  0021_emitter_match_version.sql
backend/scripts/: fetch-bt-vendor-data.sh
docs/: randomized-persist.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx
frontend/src/api/: aiAudit.ts  alertMethods.ts  alertRules.ts  client.test.ts  client.ts  coTravel.test.ts  coTravel.ts  dataSources.test.ts  dataSources.ts  emissions.ts  emitters.ts  entities.ts  gps.ts  notifications.ts  queryKeys.ts  sensors.ts  ws.ts  zones.ts
frontend/src/components/: AddAlertRuleForm.tsx  AppShell.test.tsx  AppShell.tsx  CoTravelDetails.test.tsx  CoTravelDetails.tsx  CoTravelRow.test.tsx  CoTravelRow.tsx  ComingSoon.tsx  ConditionRow.test.tsx  ConditionRow.tsx  EmissionsHeatmap.test.tsx  EmissionsHeatmap.tsx  FilterBar.test.tsx  FilterBar.tsx  IgnoredDrawer.test.tsx  IgnoredDrawer.tsx  Pagination.test.tsx  Pagination.tsx  RangeSlider.test.tsx  RangeSlider.tsx  RequestApprovalButton.test.tsx  RequestApprovalButton.tsx  RssiSparkline.test.tsx  RssiSparkline.tsx  RuleBuilder.test.tsx  RuleBuilder.tsx  SearchBar.test.tsx  SearchBar.tsx  SelectionToolbar.test.tsx  SelectionToolbar.tsx  SensorDashboard.test.tsx  SensorDashboard.tsx  (+18 more)
(+54 files in other folders)
