[package]
name = "fluxfang-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1.0.228", features = ["derive"] }
fluxfang-core = { version = "0.1.0", path = "../fluxfang-core" }
fluxfang-db = { version = "0.1.0", path = "../fluxfang-db" }
tower-sessions = "0.13"
time = "0.3.53"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "tls-rustls"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
uuid = { version = "1.23.4", features = ["v4"] }
