[package]
name = "fluxfang-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1.0.228", features = ["derive"] }
fluxfang-core = { version = "0.1.0", path = "../fluxfang-core" }
fluxfang-db = { version = "0.1.0", path = "../fluxfang-db" }
fluxfang-capture = { version = "0.1.0", path = "../fluxfang-capture" }
tower-sessions = "0.13"
time = "0.3.53"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "tls-rustls"] }
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
async-trait = "0.1"
tokio = { version = "1", features = ["test-util"] }
