[package]
name = "fluxfang-capture"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "sync", "time", "macros", "test-util"] }
