[package]
name = "fluxfang-sensor-proto"
version = "0.1.0"
edition = "2021"

[dependencies]
chacha20poly1305 = "0.10"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
